@@ -24,7 +24,9 @@ Plugins
 Maintenance
 -----------
 
-* Partial fix of issue #48 (Windows service not stopped properly), cf. comment 4
+* Fix upload of multiple DICOM files using one single POST call to "multipart/form-data"
+  Could be the final resolution of issue #21 (DICOM files missing after uploading with Firefox)
+* Partial fix of issue #48 (Windows service not stopped properly), cf. comments 4 and 5
 * Upgraded dependencies for static builds (notably on Windows):
   - jsoncpp 1.9.4
 
